--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							<input type="number" id="areaInput" required>
 							<label for="areaInput">Площадь</label>
 						</div>
-						<input type="range" id="areaRange" min="20" max="100" value="" step="1">
+						<input type="range" id="areaRange" min="20" max="100" value="40" step="1">
 						<p id="calcResult"></p>
 					</article>
 					<article class="application">
