--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
 				<main>
 					<article class="calculator">
 						<h2>Рассчитайте стоимость</h2>
-						<div class="row">
+						<div class="row" id="calcRadio">
 							<div class="radio_button">
-								<input type="radio" id="calcRadio_1" name="calcRadio" checked>
+								<input type="radio" id="calcRadio_1" value="1500" name="calcRadio" checked>
 								<label for="calcRadio_1">Черновой</label>
 							</div>
 							<div class="radio_button">
-								<input type="radio" id="calcRadio_2" name="calcRadio">
+								<input type="radio" id="calcRadio_2" value="2200" name="calcRadio">
 								<label for="calcRadio_2">Чистовой</label>
 							</div>
 							<div class="radio_button">
-								<input type="radio" id="calcRadio_3" name="calcRadio">
+								<input type="radio" id="calcRadio_3" value="3500" name="calcRadio">
 								<label for="calcRadio_3">Дизайнерский</label>
 							</div>
 						</div>
