--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
 					</article>
 				</header>
 				<main>
+					<article class="features">
+						<ul>
+							<li>Гарантия</li>
+							<li>Работа по договору</li>
+							<li>Профессиональные мастера</li>
+							<li>Все виды работ</li>
+						</ul>
+					</article>
 					<article class="calculator">
 						<h2>Рассчитайте стоимость</h2>
 						<div class="row" id="calcRadio">
@@ -59,7 +67,7 @@
 											<option value="+992" title="Таджикистан">+992</option>
 											<option value="+998" title="Узбекистан">+998</option>
 										</select>
-										<input type="tel" name="tel" id="tel" placeholder="Ваш номер" maxlength="10">
+										<input type="tel" name="tel" id="tel" placeholder="Ваш номер" maxlength="15">
 									</div>
 								</li>
 								<li>
