--- a/index.html
+++ b/index.html
@@ -13,17 +13,61 @@
 		<div class="wrapper">
 			<div class="content">
 				<header>
-					<article class="hero">
-						
-					</article>
+					<article class="hero"></article>
 				</header>
 				<main>
 					<article class="features">
 						<ul>
-							<li>Гарантия</li>
-							<li>Работа по договору</li>
-							<li>Профессиональные мастера</li>
-							<li>Все виды работ</li>
+							<li>
+								<div>
+									<p>Работа по договору</p>
+									<figure>
+										<picture>
+											<img alt="" loading="lazy" src="img/features_1.png">
+										</picture>
+									</figure>
+								</div>
+							</li>
+							<li>
+								<div>
+									<p>Мастера своего дела</p>
+									<figure>
+										<picture>
+											<img alt="" loading="lazy" src="img/features_2.png">
+										</picture>
+									</figure>
+								</div>
+							</li>
+							<li>
+								<div>
+									<p>Все виды работ</p>
+									<figure>
+										<picture>
+											<img alt="" loading="lazy" src="img/features_3.png">
+										</picture>
+									</figure>
+								</div>
+							</li>
+							<li>
+								<div>
+									<p>Соотвествие стандартам</p>
+									<figure>
+										<picture>
+											<img alt="" loading="lazy" src="img/features_4.png">
+										</picture>
+									</figure>
+								</div>
+							</li>
+							<li>
+								<div>
+									<p>Гарантия на все работы</p>
+									<figure>
+										<picture>
+											<img alt="" loading="lazy" src="img/features_5.png">
+										</picture>
+									</figure>
+								</div>
+							</li>
 						</ul>
 					</article>
 					<article class="calculator">
