--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<link rel="icon" href="/img/ico.svg" type="image/svg+xml">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Строим!</title>
+		<title>«СтроимВместе» ― строительная компания в Москве. Услуги строительства и ремонта.</title>
 
 		<link rel="stylesheet" href="style.css">
 		<script src="main.js" defer></script>
@@ -68,6 +68,27 @@
 									</figure>
 								</div>
 							</li>
+						</ul>
+					</article>
+					<article class="roadmap">
+						<h2>Как мы работаем?</h2>
+						<ul id="slider">
+							<li>
+								<h3>Оставьте заявку</h3>
+								<p>Укажите необходимый вид работ и контактные данные</p>
+							</li>
+							<li>
+								<h3>Заключите договор</h3>
+								<p>Расскажите все пожелания и подпишите договор</p>
+							</li>
+							<li>
+								<h3>Примите работу</h3>
+								<p>Осущетвите приемку готовой работы</p>
+							</li>
+							<!-- <li>
+								<h3>Назначьте время</h3>
+								<p>Сообщите нам когда мы можем приступить к работе</p>
+							</li> -->
 						</ul>
 					</article>
 					<article class="calculator">
