--- a/index.html
+++ b/index.html
@@ -144,6 +144,17 @@
 							</ul>
 						</form>
 					</article>
+					<article class="logo">
+						<h2>Сотрудничества</h2>
+						<ul>
+							<li><p>ПГС-Групп</p></li>
+							<li><p>МК-Групп</p></li>
+							<li><p>Милти</p></li>
+							<li><p>Первая Газовая Компания</p></li>
+							<li><p>Цитадель</p></li>
+							<li><p>Девятый трест</p></li>
+						</ul>
+					</article>
 				</main>
 			</div>
 		</div>
